@@ -23,7 +23,7 @@ import javax.servlet.jsp.tagext.Tag;
 
 import org.junit.jupiter.api.Test;
 
-import org.springframework.tests.sample.beans.TestBean;
+import org.springframework.beans.testfixture.beans.TestBean;
 import org.springframework.validation.BeanPropertyBindingResult;
 import org.springframework.web.servlet.support.BindStatus;
 import org.springframework.web.servlet.tags.BindTag;
@@ -56,7 +56,7 @@ public class InputTagTests extends AbstractFormTagTests {
 		// set up test data
 		this.rob = new TestBean();
 		this.rob.setName("Rob");
-		this.rob.setMyFloat(new Float(12.34));
+		this.rob.setMyFloat(Float.valueOf(12.34f));
 
 		TestBean sally = new TestBean();
 		sally.setName("Sally");
